v4.0.1:
  Users:
    - Ensure that the pseudo-subtomograms of the initial model protocol have even dimensions
v4.0.0:
  Users:
    - Relion 5.0.
    - Adapted to scipion-em-relion deprecation of relion3.
    - Add warning preventing to set the box size and the cropped box size to the same value as it may cause an
      internal error in relion (Thanks to DSheperd).
  Developers:
    - Fix inspect in buildbot: Tkagg not set in wizard module.
    - Protocols CTF refine and Bayesian polising get the postprocess.star the introduced post-processed volume, as an
      extended attribute.
    - Fix convert for 3D particles in Relion 5.
    - Improve the validations in protocols autorefine and classify 3d.
v3.4.0:
  Note: this was supposed to be 3.3.0, but was published as 3.4.0
  Users:
    - After having performed a refine or classification of particles, fields _rlnLogLikeliContribution,
      _rlnMaxValueProbDistribution and _rlnNrOfSignificantSamples are registered, so they can be plotted versus the
      no. particles using the data viewer and used as quality control metrics.
   - Add extra params to some more protocols apart from refine subtomograms.
   - Fix some initial MPI/Threads combinations (Thanks to Bram Koster).
   - Rename the protocols the same as in native Relion.
   - Enhancing the helps and use of RelionTomo4 (Thanks to J. L. Vilas).
   - Validation conditions have been release and checked (Thanks to J. L. Vilas).
  Developers:
    - Tests rewritten using the test dataset relion40_sta_tutorial_data, using the Test Centralization Layer (TCL), and
      decoupled in independent tests.
    - Remove BETA status
v3.2.2:
 Users:
  - Hotfix: the protocol visualization on the left panel was fixed.
  - Call the tlt file generation method considering the excluded views.
  - Fix the 3d classification Scipion Classes objects generation (previous bad particle assignment).
 Developers: